# elliptician

./: Cargo.toml  README.md  agif.py  task.sh
.github/: dependabot.yml
src/: color_converter.rs  draw_command.rs  dssim.rs  main.rs  renderer.rs
